# mongodb-cpp-eg

./: CMakeLists.txt  conanfile.txt  main.cpp  readme.md
src/: main.cpp
